WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293509
Fix the BUILD_WEBKIT_OPTIONS="--webGpuSwift" build in main
https://bugs.webkit.org/show_bug.cgi?id=293509
Summary
Fix the BUILD_WEBKIT_OPTIONS="--webGpuSwift" build in main
Geoffrey Garen
Reported
2025-05-23 14:32:31 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-23 14:32:55 PDT
<
rdar://problem/151945915
>
Geoffrey Garen
Comment 2
2025-05-23 14:37:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45858
EWS
Comment 3
2025-05-23 19:20:16 PDT
Committed
295383@main
(ef3b9deb5815): <
https://commits.webkit.org/295383@main
> Reviewed commits have been landed. Closing PR #45858 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug