Fix the BUILD_WEBKIT_OPTIONS="--webGpuSwift" build in main https://bugs.webkit.org/show_bug.cgi?id=293509 rdar://151945915

Reviewed by Mike Wyrzykowski.

The Swift-clang importer is complaining about:

    * ambiguity in conversion of 'Checked<unsigned long, Checked<unsigned int, CrashOnOverflow>>' to 'int'

    * 'Checked<unsigned long, WTF::Checked<unsigned int>>' is not literal because it is not an aggregate and has no constexpr constructors other than copy or move constructors

I don't fully understand these complaints, and I'm not certain why Swift-clang
behaves differently from clang itself, within a given toolchain.

That said, I just did what the complaints said and then they went away.

* Source/WTF/wtf/CheckedArithmetic.h:
(WTF::Checked::Checked): Say 'contexpr' because the compiler has a sad when you
don't, and these functions do, in fact, appear to be constexpr.

* Source/WebGPU/WebGPU/Internal/WebGPUSwiftInternal.h:
(WebGPU_Internal::roundUpToMultipleOfNonPowerOfTwoCheckedUInt32UnsignedLong):
Avoid explicit template arguments because they're redundant and I think they had
the wrong types anyway.

Canonical link: https://commits.webkit.org/295383@main